--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-css-interop": "^0.1.22",
+    "react-native-error-boundary": "^2.0.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
