--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.6.1",
     "@tanstack/react-query": "^5.69.0",
+    "@tanstack/react-table": "^8.21.2",
     "axios": "^1.8.4",
     "expo": "~52.0.40",
     "expo-blur": "~14.0.3",
@@ -57,7 +58,6 @@
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "^15.2.0",
-    "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "react-redux": "^9.2.0",
     "tailwindcss": "^3.4.17"
