--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-app",
+  "name": "clinic-app",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -30,6 +30,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.6.1",
+    "@tanstack/react-form": "^1.1.2",
     "@tanstack/react-query": "^5.69.0",
     "@tanstack/react-table": "^8.21.2",
     "axios": "^1.8.4",
