refactor: update app name and slug from "ai-app" to "clinic-app"

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "ai-app",
-    "slug": "ai-app",
+    "name": "clinic-app",
+    "slug": "clinic-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
